--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,5 +19,8 @@
     "elysia": "^1.4.22",
     "resend": "^6.8.0",
     "@dictation/shared": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.10"
   }
 }
