--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -10,11 +10,10 @@
   "dependencies": {
     "@react-email/components": "0.0.32",
     "@react-email/render": "1.0.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/react": "^19.2.10",
     "react-email": "3.0.6",
     "typescript": "^5"
   }
