--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,34 +4,45 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
+    "db:generate": "drizzle-kit generate --config ./drizzle.dev.config.ts",
+    "db:migrate:dev": "drizzle-kit migrate --config ./drizzle.dev.config.ts",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run"
   },
   "dependencies": {
+    "@dictation/emails": "workspace:*",
     "@dictation/shared": "workspace:*",
+    "@elevenlabs/elevenlabs-js": "^2.34.0",
     "@google/genai": "^1.38.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@trigger.dev/sdk": "^4.3.3",
+    "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.561.0",
     "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite-tsconfig-paths": "^6.0.2"
+    "resend": "^6.9.1",
+    "vite-tsconfig-paths": "^6.0.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@trigger.dev/build": "^4.3.3",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.7.2",
