--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "vite dev --port 3000",
     "db:generate": "drizzle-kit generate --config ./drizzle.dev.config.ts",
     "db:migrate:dev": "drizzle-kit migrate --config ./drizzle.dev.config.ts",
+    "trigger:dev": "bunx trigger.dev@latest dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run"
@@ -22,13 +23,20 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
-    "@trigger.dev/sdk": "^4.3.3",
+    "@trigger.dev/sdk": "4.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "^0.563.0",
+    "next-themes": "^0.4.6",
     "nitro": "npm:nitro-nightly@latest",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "resend": "^6.9.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "trigger.dev": "^4.3.3",
     "vite-tsconfig-paths": "^6.0.2",
     "zod": "^4.3.6"
   },
@@ -37,7 +45,7 @@
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@trigger.dev/build": "^4.3.3",
+    "@trigger.dev/build": "4.3.3",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
@@ -45,6 +53,7 @@
     "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
