--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "vite dev --port 3000",
     "db:generate": "drizzle-kit generate --config ./drizzle.dev.config.ts",
     "db:migrate:dev": "drizzle-kit migrate --config ./drizzle.dev.config.ts",
-    "trigger:dev": "bunx trigger.dev@latest dev",
+    "trigger": "bunx trigger.dev dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run"
