--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -8,13 +8,12 @@
     "export": "email export"
   },
   "dependencies": {
-    "@react-email/components": "0.0.32",
-    "@react-email/render": "1.0.4",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "@react-email/components": "1.0.7",
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
   },
   "devDependencies": {
-    "react-email": "3.0.6",
+    "react-email": "latest",
     "typescript": "^5"
   }
 }
