--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web2",
+  "name": "auri-web",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,8 +12,8 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@dictation/emails": "workspace:*",
-    "@dictation/shared": "workspace:*",
+    "@auri/emails": "workspace:*",
+    "@auri/shared": "workspace:*",
     "@elevenlabs/elevenlabs-js": "^2.34.0",
     "@google/genai": "^1.38.0",
     "@neondatabase/serverless": "^1.0.2",
