--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dictation/shared",
+    "name": "@auri/shared",
     "version": "1.0.0",
     "private": true,
     "main": "index.ts",
