--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "google-auth-library": "^10.5.0",
     "lucide-react": "^0.563.0",
     "next-themes": "^0.4.6",
     "nitro": "npm:nitro-nightly@latest",
