--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "main": "index.ts",
     "dependencies": {
-        "lucide-react": "^0.562.0"
+        "lucide-react": "^0.562.0",
+        "zod": "^3.23.8"
     }
 }
