--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,14 @@
     "@auri/emails": "workspace:*",
     "@auri/shared": "workspace:*",
     "@elevenlabs/elevenlabs-js": "^2.34.0",
+    "@elevenlabs/react": "^0.14.0",
     "@google-cloud/storage": "^7.19.0",
     "@google/genai": "^1.38.0",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
@@ -29,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.34.0",
     "google-auth-library": "^10.5.0",
     "lucide-react": "^0.563.0",
     "next-themes": "^0.4.6",
