--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,20 +7,31 @@
     "db:generate": "drizzle-kit generate --config ./drizzle.dev.config.ts",
     "db:migrate:dev": "drizzle-kit migrate --config ./drizzle.dev.config.ts",
     "trigger": "bunx trigger.dev dev",
-    "build": "vite build",
+    "build": "vite build && tsc --noEmit",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "deploy": "bun run build && wrangler deploy",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@auri/emails": "workspace:*",
     "@auri/shared": "workspace:*",
+    "@cloudflare/vite-plugin": "^1.23.1",
     "@elevenlabs/elevenlabs-js": "^2.34.0",
     "@elevenlabs/react": "^0.14.0",
     "@google-cloud/storage": "^7.19.0",
     "@google/genai": "^1.38.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.132.0",
@@ -64,6 +75,7 @@
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0"
+    "web-vitals": "^5.1.0",
+    "wrangler": "^4.63.0"
   }
 }
