--- a/apps/web/wrangler.jsonc
+++ b/apps/web/wrangler.jsonc
@@ -5,5 +5,11 @@
     "compatibility_flags": [
         "nodejs_compat"
     ],
-    "main": "@tanstack/react-start/server-entry"
+    "main": "@tanstack/react-start/server-entry",
+    "routes": [
+        {
+            "pattern": "hearauri.com",
+            "custom_domain": true
+        }
+    ]
 }
